# scratch-scanner-rs

./: .gitguardian.yaml  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  SCANNER_SCENARIOS_TRACKING.md
.claude/: settings.json
.claude/agents/: performance-analyzer.md  security-reviewer.md
.claude/hooks/: doc-rigor-gate.sh
.github/workflows/: ci.yml  claude.yml
benches/: anchor_optimization.rs  commit_graph_generation.rs  fixed_set.rs  fixed_vec.rs  git_scan_perf.rs  hotspots.rs  lexical_tokenizer.rs  memory_bandwidth.rs  midx_build_scaling.rs  per_rule_cost.rs  queue.rs  regex_complexity.rs  released_set.rs  ring_buffer.rs  rule_isolation.rs  rule_scaling.rs  scan.rs  scanner_throughput.rs  set_associative_cache.rs  structures.rs  throughput_comparison.rs  timing_wheel.rs  validator.rs  vectorscan_overhead.rs  vectorscan_pattern_complexity.rs
docs/: README.md  anchor_optimization_spec.md  architecture-overview.md  architecture.md  async-io.md  branch-ilp-optimization-plan.md  bugs.md  data-types.md  detection-engine.md  detection-rules.md  engine-decode-state.md  engine-stream-decode.md  engine-transforms.md  engine-vectorscan-prefilter.md  engine-window-validation.md  extend.md  fp-filtering-brainstorm.md  fp-filtering-design-a-implementation-guide.md  fp-filtering-design-b-implementation-guide.md  fp-filtering-review.md  git-pack-exec-sequentiality-plan.md  git-scan-findings-tracker.md  git-scan-in-memory-artifact-findings-tracker.md  git-scan-preflight-option2-fallback.md  git-scan-preflight-option3-inmemory.md  git-scanning-performance-implementation-guide.md  git-scanning-spill-streaming-implementation-guide.md  git-scanning.md  git_simulation_harness_guide.md  investigation-hit-acc-pool-sizing.md  io-uring-open-statx-plan.md  kani-verification.md  keywords.md  memory-management.md  no_alloc_after_startup.md  perf-baseline-2026-01-27.md  perf-struct-packing-plan.md  perf.md  pipeline-flow.md  pipeline-state-machine.md  (+28 more)
examples/: gen_scheduler_corpus.rs
fuzz/: Cargo.toml
fuzz/dict/: base64.dict
fuzz/fuzz_targets/: fuzz_anchor_soundness.rs  fuzz_atomic_bitset.rs  fuzz_b64_gate_build_and_scan.rs  fuzz_b64_gate_determinism.rs  fuzz_b64_gate_differential.rs  fuzz_pack_parse_delta.rs  fuzz_tiger_chunking.rs  fuzz_vs_cache_load.rs
scripts/: analyze_rules.rs  gen_git_pack_corpus.py
src/: api.rs  b64_yara_gate.rs  demo.rs  gitleaks_rules.rs  lexical.rs  lib.rs  main.rs  perf_stats.rs  pipeline.rs  regex2anchor.rs  runtime.rs  scratch_memory.rs  test_utils.rs  tiger_harness.rs
src/archive/: budget.rs  config.rs  detect.rs  mod.rs  outcome.rs  path.rs  scan.rs
src/async_io/: linux.rs  macos.rs  mod.rs
src/engine/: buffer_scan.rs  core.rs  decode_state.rs  helpers.rs  hit_pool.rs  mod.rs  prefilter.rs  raw_density_gate.rs  rule_repr.rs  scratch.rs  stream_decode.rs  tests.rs  transform.rs  validator.rs  vectorscan_prefilter.rs  vs_cache.rs  window_validate.rs  work_items.rs
src/git_scan/: alloc_guard.rs  artifact_acquire.rs  blob_introducer.rs  blob_spill.rs  byte_arena.rs  bytes.rs  commit_graph.rs  commit_graph_mem.rs  commit_loader.rs  commit_parse.rs  commit_walk.rs  commit_walk_limits.rs  engine_adapter.rs  errors.rs  finalize.rs  limits.rs  mapping_bridge.rs  midx.rs  midx_build.rs  midx_error.rs  mod.rs  object_id.rs  object_store.rs  oid_index.rs  pack_amq.rs  pack_amq_tests.rs  pack_cache.rs  pack_candidates.rs  pack_decode.rs  pack_delta.rs  pack_exec.rs  pack_idx.rs  pack_inflate.rs  pack_io.rs  pack_plan.rs  pack_plan_model.rs  pack_reader.rs  pack_strategy.rs  path_policy.rs  perf.rs  (+34 more)
src/lsm/: mod.rs  set_associative_cache.rs
src/pool/: mod.rs  node_pool.rs
src/scheduler/: affinity.rs  alloc.rs  bench.rs  bench_compare.rs  bench_executor.rs  bench_local.rs  bench_synthetic.rs  budget.rs  chunking.rs  contract.rs  count_budget.rs  device_slots.rs  engine_impl.rs  engine_stub.rs  engine_trait.rs  executor.rs  executor_core.rs  failure.rs  findings.rs  global_resource_pool.rs  lexical_pass.rs  local.rs  local_fs_owner.rs  local_fs_sharded.rs  local_fs_uring.rs  metrics.rs  mod.rs  output_sink.rs  parallel_scan.rs  remote.rs  rng.rs  rusage.rs  sim.rs  sim_executor_harness.rs  task_graph.rs  ts_buffer_pool.rs  ts_chunk.rs  worker_id.rs  yield_policy.rs
src/sim/: artifact.rs  clock.rs  executor.rs  fault.rs  fs.rs  minimize.rs  mod.rs  rng.rs  trace.rs
src/sim_archive/: build_gzip.rs  build_tar.rs  build_zip.rs  mod.rs
src/sim_git_scan/: artifact.rs  commit_graph.rs  convert.rs  error.rs  fault.rs  generator.rs  minimize.rs  mod.rs  pack_bytes.rs  pack_io.rs  persist.rs  replay.rs  runner.rs  runner_tests.rs  scenario.rs  start_set.rs  trace.rs  tree_source.rs
src/sim_scanner/: generator.rs  mod.rs  replay.rs  runner.rs  scenario.rs  vpath_table.rs
src/sim_scheduler/: mod.rs  program.rs  runner.rs
src/stdx/: atomic_bitset.rs  atomic_bitset_tests.rs  atomic_seen_sets.rs  atomic_seen_sets_tests.rs  bitset.rs  bitset_tests.rs  byte_ring.rs  fastrange.rs  fixed_set.rs  fixed_vec.rs  mod.rs  queue.rs  released_set.rs  ring_buffer.rs  spsc.rs  timing_wheel.rs  timing_wheel_tests.rs
src/unified/: cli.rs  events.rs  mod.rs  orchestrator.rs
src/util/: mod.rs  utils.rs  zero.rs
tests/: README.md  alloc_after_startup.rs  anchor_optimization_tests.rs  archive_path_canonicalization.rs  archive_scanning.rs  debug_seed4.rs  print_unfilterable.rs  regex2anchor_soundness.rs  scanner_smoke_test.rs  scheduler_sim.rs  sim_corpus_scanner.rs  sim_corpus_scheduler.rs  sim_random_scanner.rs  sim_random_scheduler.rs
tests/diagnostic/: alloc_after_startup.rs  analyze_unfilterable.rs  main.rs
tests/integration/: fs_cli_archives.rs  git_commit_walk.rs  git_engine_adapter.rs  git_inmem_artifacts.rs  git_mapping_bridge.rs  git_pack_exec.rs  git_pack_plan.rs  git_persist.rs  git_preflight.rs  git_repo_open.rs  git_run_format.rs  git_scan_validation.rs  git_seen_unique.rs  git_snapshot.rs  git_tree_diff.rs  main.rs  manual_anchors.rs
tests/property/: git_commit_walk.rs  git_engine_adapter.rs  git_spill_dedupe.rs  git_tree_diff.rs  main.rs
(+176 files in other folders)
