[package]
name = "scanner-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
aegis = "0.9"
ahash = "0.8"
libc = "0.2"
memchr = "2.6"
regex = "1.10"
regex-syntax = "0.8"
vectorscan-rs-sys = "0.0.5"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.6"

[target.'cfg(all(target_os = "linux", not(any(target_arch = "x86", target_arch = "x86_64"))))'.dependencies]
aegis = { version = "0.9", features = ["pure-rust"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
aegis = { version = "0.9", features = ["pure-rust"] }

[features]
stdx-proptest = []
kgram-gate = []
stats = []
b64-stats = ["stats"]
bench = []
tiger-harness = []

[dev-dependencies]
base64 = "0.22"
proptest = "1.4"
criterion = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bench]]
name = "scan"
harness = false

[[bench]]
name = "structures"
harness = false

[[bench]]
name = "hotspots"
harness = false
required-features = ["bench"]

[[bench]]
name = "set_associative_cache"
harness = false

[[bench]]
name = "ring_buffer"
harness = false

[[bench]]
name = "fixed_set"
harness = false

[[bench]]
name = "fixed_vec"
harness = false

[[bench]]
name = "queue"
harness = false

[[bench]]
name = "released_set"
harness = false

[[bench]]
name = "validator"
harness = false
required-features = ["bench"]

[[bench]]
name = "timing_wheel"
harness = false

[[bench]]
name = "memory_bandwidth"
harness = false

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
inherits = "release"
