[package]
name = "scanner-rs"
version = "0.1.0"
edition = "2021"

# Allow Kani's cfg flag (set automatically by cargo kani)
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[dependencies]
aegis = "0.9"
ahash = "0.8"
crossbeam-channel = "0.5"
crossbeam-deque = "0.8"
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"
libc = "0.2"
memchr = "2.6"
memmap2 = "0.9"
regex = "1.10"
regex-syntax = "0.8"
vectorscan-rs-sys = "0.0.5"
sha2 = "0.10"
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
gix-commitgraph = "0.29"
gix-hash = "0.19"
flate2 = "1.0"
rocksdb = { version = "0.22", optional = true }

# Directory walking and parallel scanning
ignore = "0.4"
num_cpus = "1.16"

# Optional dependency for thread pinning
core_affinity = { version = "0.8", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.6"

[target.'cfg(all(target_os = "linux", not(any(target_arch = "x86", target_arch = "x86_64"))))'.dependencies]
aegis = { version = "0.9", features = ["pure-rust"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
aegis = { version = "0.9", features = ["pure-rust"] }

[features]
stdx-proptest = []
kgram-gate = []
stats = []
b64-stats = ["stats"]
bench = []
tiger-harness = []
sim-harness = ["serde_json"]
kani = []  # Gate Kani model-checking proofs
scheduler-affinity = ["core_affinity"]  # Thread pinning support for scheduler
io-uring = []  # Enable io_uring scanner on Linux
scheduler-sim = []  # Enable longer-running scheduler simulation tests
rocksdb = ["dep:rocksdb"]

[dev-dependencies]
base64 = "0.22"
proptest = "1.4"
criterion = "0.5"
serde_json = "1.0"
tempfile = "3.10"

[[bench]]
name = "scan"
harness = false

[[bench]]
name = "structures"
harness = false

[[bench]]
name = "hotspots"
harness = false
required-features = ["bench"]

[[bench]]
name = "set_associative_cache"
harness = false

[[bench]]
name = "ring_buffer"
harness = false

[[bench]]
name = "fixed_set"
harness = false

[[bench]]
name = "fixed_vec"
harness = false

[[bench]]
name = "released_set"
harness = false

[[bench]]
name = "validator"
harness = false
required-features = ["bench"]

[[bench]]
name = "timing_wheel"
harness = false

[[bench]]
name = "memory_bandwidth"
harness = false

[[bench]]
name = "scanner_throughput"
harness = false

[[bench]]
name = "vectorscan_overhead"
harness = false

[[bench]]
name = "vectorscan_pattern_complexity"
harness = false
required-features = ["bench"]

[[bench]]
name = "rule_scaling"
harness = false

[[bench]]
name = "anchor_optimization"
harness = false

[[bench]]
name = "throughput_comparison"
harness = false

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
inherits = "release"

# ============================================================================
# Test Targets
# ============================================================================
# Organized test targets for different test categories.
# See tests/README.md for details on each category.

[[test]]
name = "integration"
path = "tests/integration/main.rs"

[[test]]
name = "smoke"
path = "tests/smoke/main.rs"

[[test]]
name = "property"
path = "tests/property/main.rs"

[[test]]
name = "simulation"
path = "tests/simulation/main.rs"
# No required-features: supports scheduler-sim, sim-harness, or both

[[test]]
name = "diagnostic"
path = "tests/diagnostic/main.rs"

# ============================================================================
# Examples
# ============================================================================

[[example]]
name = "gen_scheduler_corpus"
required-features = ["scheduler-sim"]
